--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,11 @@
                             <div class="form-group">
                                 <textarea class="massage-bt" placeholder="Poruka" rows="5" id="comment" name="Massage"></textarea>
                             </div>
+                            <button class="button1" type="submit">Pošalji</button> 
                           </form>   
                        </div> 
-                        <div class="main_bt"><a href="#">Pošalji</a></div>                  
+                       
+                                   
                     </div>
                  </div>
         </div>
