--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
       <li class="menu__item"><a class="menu__link" href="remot.html">Vaša mišljenja</a></li>
     </ul>
     <form class="forma1">
-      <label for="adresa">Adresa: Vojvode Milenka 3a</label>
+      <label>Adresa: Vojvode Milenka 3a</label>
       <br>
-      <label for="Email">Email: geekbit10@gmail.com</label>
+      <label>Email: geekbit10@gmail.com</label>
       <br>
-      <label for="telefon">Telefon: +381649831122</label>      
+      <label>Telefon: +381649831122</label>      
     </form>
     <p>&copy;2024 GeekBit | All Rights Reserved</p>
   </footer>
